--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <div id="app"></div>
   
+  <script src="util.js"></script>
   <script src="markdown.js"></script>
   <script src="main.js"></script>
 
