--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todos</title>
   <script src="vendor/vue.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/elements.css">
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/todo-list.css">
+  <link rel="stylesheet" href="styles/dark-mode.css">
 </head>
 <body>
 
