--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   
   <script src="util.js"></script>
   <script src="markdown.js"></script>
-  <script src="main.js"></script>
+  <script src="components/markdown-content.js"></script>
+  <script src="components/todo-list-item.js"></script>
+  <script src="components/todo-list.js"></script>
 
 </body>
 </html>
