updated height and margin for dropzones

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="util.js"></script>
   <script src="markdown.js"></script>
   <script src="components/markdown-content.js"></script>
+  <script src="components/markdown-editor.js"></script>
   <script src="components/todo-list-item.js"></script>
   <script src="components/todo-list.js"></script>
 
