implemented simple markdown interpreter

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/elements.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/todo-list.css">
+  <link rel="stylesheet" href="styles/markdown.css">
   <link rel="stylesheet" href="styles/dark-mode.css">
 </head>
 <body>
@@ -15,7 +16,7 @@
   <div id="app"></div>
   
   <script src="util.js"></script>
-  <script src="markdown.js"></script>
+  <!-- <script src="markdown.js"></script> -->
   <script src="components/markdown-content.js"></script>
   <script src="components/markdown-editor.js"></script>
   <script src="components/todo-list-item.js"></script>
